ros_ws/log/build_2024-02-19_23-24-06/motor_controller/stderr.log
  File "/home/adam/Sensor-Fusion-And-Autonomous-Racing-Cars/ros_ws/install/motor_controller/lib/python3.8/site-packages/motor_controller/motor_node.py", line 12
    import serial from Serial
                  ^
SyntaxError: invalid syntax

